example/deploy/cafe-all.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coffee
  namespace: ingress-nginx-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: coffee
  template:
    metadata:
      labels:
        app: coffee
    spec:
      imagePullSecrets:
        - name: instana-registry-key
      containers:
      - name: coffee
        image: containers.instana.io/instana/release/agent/instana-nginx-hello:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: coffee-svc
  namespace: ingress-nginx-demo
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: coffee
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tea
  namespace: ingress-nginx-demo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: tea
  template:
    metadata:
      labels:
        app: tea
    spec:
      imagePullSecrets:
        - name: instana-registry-key
      containers:
      - name: tea
        image: containers.instana.io/instana/release/agent/instana-nginx-hello:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: tea-svc
  namespace: ingress-nginx-demo
  labels:
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: tea
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: ingress-nginx-demo
  annotations: {
    nginx.org/server-snippets: opentracing_propagate_context;,
    nginx.org/location-snippets: opentracing_propagate_context;
  }
spec:
  tls:
  - hosts:
    - cafe.example.com
    secretName: cafe-secret
  rules:
  - host: cafe.example.com
    http:
      paths:
      - path: /tea
        backend:
          serviceName: tea-svc
          servicePort: 80
      - path: /coffee
        backend:
          serviceName: coffee-svc
          servicePort: 80
